# renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  vcpkg.json
shaders/: DebugDraw.frag.spv  DebugDraw.vert  DebugDraw.vert.spv  common.glsl  compile.bat  frag.spv  frustum.frag  frustum.vert  frustum.vert.spv  frustumCulling.comp  frustumCulling.comp.spv  pbr.frag  pbr.frag.spv  pbr.vert  pbr.vert.spv  pbr_bindless.frag  pbr_bindless.frag.spv  shader.frag  shader.vert  shadowmap.vert  shadowmap.vert.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv  vert.spv
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  DebugDraw.cpp  DebugDraw.h  ExampleApplication.cpp  ExampleApplication.h  GPUDataUploader.cpp  GPUDataUploader.h  Scene.cpp  Scene.h  StagingManager.cpp  StagingManager.h  camera.cpp  camera.h  main.cpp  pch.cpp  pch.h
src/RenderGraph/: RenderGraph.cpp  RenderGraph.h  RenderGraphBuilder.cpp  RenderGraphBuilder.h  RenderGraphPass.cpp  RenderGraphPass.h
src/UI/: UI.cpp  UI.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
src/Vulkan/: Buffer.cpp  Buffer.h  DebugMarkers.h  Utils.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanImage.cpp  VulkanImage.h  VulkanMaterial.cpp  VulkanMaterial.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h
src/vulkan/: buffer.cpp  buffer.h  device.cpp  device.h  image.cpp  image.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  utils.h
